--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dependencies = [
     "wsproto>=1.0,<=1.2.0",
     "publicsuffix2>=2.20190812,<=2.20191221",
     "zstandard>=0.15,<=0.22.0",
+    "dnslib>=0.9.14,<1",
 ]
 
 [project.optional-dependencies]
